implement tflite in android project

--- a/Android/HomeAgricultureMonitoringSystem/app/src/main/res/values/strings.xml
+++ b/Android/HomeAgricultureMonitoringSystem/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="camera">Camera</string>
     <string name="gallery">Gallery</string>
     <string name="identifikasi_gambar">Identifikasi Gambar</string>
+    <string name="sehat">Sehat</string>
 </resources>
